<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <FrameLayout
        android:id="@+id/dotContainer"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_margin="10dp"
        android:background="@drawable/dotcontainer"
        android:backgroundTintMode="multiply"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.567">

    </FrameLayout>

    <TextView
        android:id="@+id/countdownTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/dotContainer"
        app:layout_constraintEnd_toEndOf="@+id/dotContainer"
        app:layout_constraintStart_toStartOf="@+id/dotContainer"
        app:layout_constraintTop_toTopOf="@+id/dotContainer" />

    <TextView
        android:id="@+id/paused"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paused"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="@+id/dotContainer"
        app:layout_constraintEnd_toEndOf="@+id/dotContainer"
        app:layout_constraintStart_toStartOf="@+id/dotContainer"
        app:layout_constraintTop_toTopOf="@+id/dotContainer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/header_container" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/scoretitle"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/footer_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/goback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:text="@string/goback"
                android:textColor="@color/white"
                app:icon="@drawable/baseline_arrow_back_24"
                app:iconTint="@color/white" />


            <Button
                android:id="@+id/pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:drawableLeft="@drawable/baseline_pause_24"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/pause"
                android:textColor="@color/black"
                app:iconTint="@color/black" />

            <Button
                android:id="@+id/restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/restart"
                android:textColor="@color/white"
                app:icon="@drawable/baseline_refresh_24"
                app:iconTint="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_container"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/dotContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wrongmoves"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/movesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
